# Omni-Seed

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt  run-locally.sh  test-setup.md
analyser/: prompts.py  worker.py
collector/: main.py  poller.py
db/: schema.sql
tests/: test_analyser.py
ui/client/: ExportPanel.jsx
ui/server/: db.js  package.json  server.js
ui/server/public/: index.html
ui/server/routes/: dashboard.js  export.js
