[project]
name = "omniseed"
version = "0.1.0"
description = "In-house data seed analyser: collector + LLM analyser"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "redis",
    "httpx",
    "apscheduler",
    "aiosqlite",
]

[tool.uv]
# uv manages the virtual environment automatically via `uv run` / `uv sync`
